// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form group  with Checkbox renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
    >
      Select your preferred destinations
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      Helper text for the group
    </div>
  </div>
</jest>
`;

exports[`Form group  with Checkbox renders correctly when invalid 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--invalid"
    >
      Select your preferred destinations
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      Helper text for the group
    </div>
    <div
      class="ecl-feedback-message"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-feedback-message__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#error"
        />
      </svg>
            Invalid text
    </div>
  </div>
</jest>
`;

exports[`Form group  with Checkbox renders correctly when required 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
    >
      Select your preferred destinations
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      Helper text for the group
    </div>
  </div>
</jest>
`;

exports[`Form group  with Checkbox renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-form-group"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <label
      class="ecl-form-label"
    >
      Select your preferred destinations
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      Helper text for the group
    </div>
  </div>
</jest>
`;

exports[`Form group  with Checkbox renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-form-group custom-class custom-class--test"
  >
    <label
      class="ecl-form-label"
    >
      Select your preferred destinations
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      Helper text for the group
    </div>
  </div>
</jest>
`;

exports[`Form group  with Datepicker renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Datepicker renders correctly when disabled 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--disabled"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block ecl-help-block--disabled"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Datepicker renders correctly when invalid 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--invalid"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-feedback-message"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-feedback-message__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#error"
        />
      </svg>
            Invalid text
    </div>
  </div>
</jest>
`;

exports[`Form group  with Datepicker renders correctly when required 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Datepicker renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-form-group"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <label
      class="ecl-form-label"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Datepicker renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-form-group custom-class custom-class--test"
  >
    <label
      class="ecl-form-label"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with File Upload renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
  </div>
</jest>
`;

exports[`Form group  with File Upload renders correctly when disabled 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--disabled"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block ecl-help-block--disabled"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
  </div>
</jest>
`;

exports[`Form group  with File Upload renders correctly when invalid 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--invalid"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
    <div
      class="ecl-feedback-message"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-feedback-message__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#error"
        />
      </svg>
            Invalid text
    </div>
  </div>
</jest>
`;

exports[`Form group  with File Upload renders correctly when required 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
  </div>
</jest>
`;

exports[`Form group  with File Upload renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-form-group"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <label
      class="ecl-form-label"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
  </div>
</jest>
`;

exports[`Form group  with File Upload renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-form-group custom-class custom-class--test"
  >
    <label
      class="ecl-form-label"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
  </div>
</jest>
`;

exports[`Form group  with Radio renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
    >
      Select your country
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the group's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Radio renders correctly when disabled 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--disabled"
    >
      Select your country
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block ecl-help-block--disabled"
    >
      This is the group's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Radio renders correctly when invalid 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--invalid"
    >
      Select your country
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the group's helper text.
    </div>
    <div
      class="ecl-feedback-message"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-feedback-message__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#error"
        />
      </svg>
            Invalid text
    </div>
  </div>
</jest>
`;

exports[`Form group  with Radio renders correctly when required 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
    >
      Select your country
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the group's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Radio renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-form-group"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <label
      class="ecl-form-label"
    >
      Select your country
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the group's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Radio renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-form-group custom-class custom-class--test"
  >
    <label
      class="ecl-form-label"
    >
      Select your country
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the group's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Range field renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
    >
      Range slider
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Range field renders correctly when disabled 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--disabled"
    >
      Range slider
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block ecl-help-block--disabled"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Range field renders correctly when invalid 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--invalid"
    >
      Range slider
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-feedback-message"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-feedback-message__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#error"
        />
      </svg>
            Invalid text
    </div>
  </div>
</jest>
`;

exports[`Form group  with Range field renders correctly when required 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
    >
      Range slider
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Range field renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-form-group"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <label
      class="ecl-form-label"
    >
      Range slider
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Range field renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-form-group custom-class custom-class--test"
  >
    <label
      class="ecl-form-label"
    >
      Range slider
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Rating field renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
    >
      Please Rate
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the group's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Rating field renders correctly when disabled 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--disabled"
    >
      Please Rate
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block ecl-help-block--disabled"
    >
      This is the group's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Rating field renders correctly when invalid 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--invalid"
    >
      Please Rate
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the group's helper text.
    </div>
    <div
      class="ecl-feedback-message"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-feedback-message__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#error"
        />
      </svg>
            Invalid text
    </div>
  </div>
</jest>
`;

exports[`Form group  with Rating field renders correctly when required 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
    >
      Please Rate
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the group's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Rating field renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-form-group"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <label
      class="ecl-form-label"
    >
      Please Rate
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the group's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Rating field renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-form-group custom-class custom-class--test"
  >
    <label
      class="ecl-form-label"
    >
      Please Rate
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the group's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Select renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
      for="select-default"
    >
      Select a country
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-select__container ecl-select__container--m"
    >
      <select
        aria-label="country"
        class="ecl-select"
        id="select-default"
        name="country"
        required=""
      >
        <optgroup
          label="European countries"
        >
          <option
            value="1"
          >
            Belgium
          </option>
          <option
            value="2"
          >
            France
          </option>
          <option
            disabled=""
            value="3"
          >
            Luxembourg
          </option>
          <option
            value="4"
          >
            Germany
          </option>
          <option
            selected=""
            value="5"
          >
            Bulgaria
          </option>
          <option
            value="6"
          >
            Italy
          </option>
          <option
            value="7"
          >
            Romania
          </option>
          <option
            value="8"
          >
            Greece
          </option>
          <option
            value="9"
          >
            Hungary
          </option>
          <option
            value="10"
          >
            Portugal
          </option>
        </optgroup>
        <optgroup
          label="Non European countries"
        >
          <option
            value="11"
          >
            China
          </option>
        </optgroup>
        <option
          value="12"
        >
          standalone option
        </option>
      </select>
      <div
        class="ecl-select__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-icon--rotate-180 ecl-select__icon-shape"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Form group  with Select renders correctly when disabled 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--disabled"
      for="select-default"
    >
      Select a country
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block ecl-help-block--disabled"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-select__container ecl-select__container--disabled ecl-select__container--m"
    >
      <select
        aria-label="country"
        class="ecl-select"
        disabled=""
        id="select-default"
        name="country"
        required=""
      >
        <optgroup
          label="European countries"
        >
          <option
            value="1"
          >
            Belgium
          </option>
          <option
            value="2"
          >
            France
          </option>
          <option
            disabled=""
            value="3"
          >
            Luxembourg
          </option>
          <option
            value="4"
          >
            Germany
          </option>
          <option
            selected=""
            value="5"
          >
            Bulgaria
          </option>
          <option
            value="6"
          >
            Italy
          </option>
          <option
            value="7"
          >
            Romania
          </option>
          <option
            value="8"
          >
            Greece
          </option>
          <option
            value="9"
          >
            Hungary
          </option>
          <option
            value="10"
          >
            Portugal
          </option>
        </optgroup>
        <optgroup
          label="Non European countries"
        >
          <option
            value="11"
          >
            China
          </option>
        </optgroup>
        <option
          value="12"
        >
          standalone option
        </option>
      </select>
      <div
        class="ecl-select__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-icon--rotate-180 ecl-select__icon-shape"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Form group  with Select renders correctly when invalid 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--invalid"
      for="select-default"
    >
      Select a country
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-feedback-message"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-feedback-message__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#error"
        />
      </svg>
            Invalid text
    </div>
    <div
      class="ecl-select__container ecl-select__container--invalid ecl-select__container--m"
    >
      <select
        aria-label="country"
        class="ecl-select"
        id="select-default"
        name="country"
        required=""
      >
        <optgroup
          label="European countries"
        >
          <option
            value="1"
          >
            Belgium
          </option>
          <option
            value="2"
          >
            France
          </option>
          <option
            disabled=""
            value="3"
          >
            Luxembourg
          </option>
          <option
            value="4"
          >
            Germany
          </option>
          <option
            selected=""
            value="5"
          >
            Bulgaria
          </option>
          <option
            value="6"
          >
            Italy
          </option>
          <option
            value="7"
          >
            Romania
          </option>
          <option
            value="8"
          >
            Greece
          </option>
          <option
            value="9"
          >
            Hungary
          </option>
          <option
            value="10"
          >
            Portugal
          </option>
        </optgroup>
        <optgroup
          label="Non European countries"
        >
          <option
            value="11"
          >
            China
          </option>
        </optgroup>
        <option
          value="12"
        >
          standalone option
        </option>
      </select>
      <div
        class="ecl-select__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-icon--rotate-180 ecl-select__icon-shape"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Form group  with Select renders correctly when required 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
      for="select-default"
    >
      Select a country
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-select__container ecl-select__container--m"
    >
      <select
        aria-label="country"
        class="ecl-select"
        id="select-default"
        name="country"
        required=""
      >
        <optgroup
          label="European countries"
        >
          <option
            value="1"
          >
            Belgium
          </option>
          <option
            value="2"
          >
            France
          </option>
          <option
            disabled=""
            value="3"
          >
            Luxembourg
          </option>
          <option
            value="4"
          >
            Germany
          </option>
          <option
            selected=""
            value="5"
          >
            Bulgaria
          </option>
          <option
            value="6"
          >
            Italy
          </option>
          <option
            value="7"
          >
            Romania
          </option>
          <option
            value="8"
          >
            Greece
          </option>
          <option
            value="9"
          >
            Hungary
          </option>
          <option
            value="10"
          >
            Portugal
          </option>
        </optgroup>
        <optgroup
          label="Non European countries"
        >
          <option
            value="11"
          >
            China
          </option>
        </optgroup>
        <option
          value="12"
        >
          standalone option
        </option>
      </select>
      <div
        class="ecl-select__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-icon--rotate-180 ecl-select__icon-shape"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Form group  with Select renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-form-group"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <label
      class="ecl-form-label"
      for="select-default"
    >
      Select a country
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-select__container ecl-select__container--m"
    >
      <select
        aria-label="country"
        class="ecl-select"
        id="select-default"
        name="country"
        required=""
      >
        <optgroup
          label="European countries"
        >
          <option
            value="1"
          >
            Belgium
          </option>
          <option
            value="2"
          >
            France
          </option>
          <option
            disabled=""
            value="3"
          >
            Luxembourg
          </option>
          <option
            value="4"
          >
            Germany
          </option>
          <option
            selected=""
            value="5"
          >
            Bulgaria
          </option>
          <option
            value="6"
          >
            Italy
          </option>
          <option
            value="7"
          >
            Romania
          </option>
          <option
            value="8"
          >
            Greece
          </option>
          <option
            value="9"
          >
            Hungary
          </option>
          <option
            value="10"
          >
            Portugal
          </option>
        </optgroup>
        <optgroup
          label="Non European countries"
        >
          <option
            value="11"
          >
            China
          </option>
        </optgroup>
        <option
          value="12"
        >
          standalone option
        </option>
      </select>
      <div
        class="ecl-select__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-icon--rotate-180 ecl-select__icon-shape"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Form group  with Select renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-form-group custom-class custom-class--test"
  >
    <label
      class="ecl-form-label"
      for="select-default"
    >
      Select a country
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-select__container ecl-select__container--m"
    >
      <select
        aria-label="country"
        class="ecl-select"
        id="select-default"
        name="country"
        required=""
      >
        <optgroup
          label="European countries"
        >
          <option
            value="1"
          >
            Belgium
          </option>
          <option
            value="2"
          >
            France
          </option>
          <option
            disabled=""
            value="3"
          >
            Luxembourg
          </option>
          <option
            value="4"
          >
            Germany
          </option>
          <option
            selected=""
            value="5"
          >
            Bulgaria
          </option>
          <option
            value="6"
          >
            Italy
          </option>
          <option
            value="7"
          >
            Romania
          </option>
          <option
            value="8"
          >
            Greece
          </option>
          <option
            value="9"
          >
            Hungary
          </option>
          <option
            value="10"
          >
            Portugal
          </option>
        </optgroup>
        <optgroup
          label="Non European countries"
        >
          <option
            value="11"
          >
            China
          </option>
        </optgroup>
        <option
          value="12"
        >
          standalone option
        </option>
      </select>
      <div
        class="ecl-select__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-icon--rotate-180 ecl-select__icon-shape"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Form group  with Text field renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Text field renders correctly when disabled 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--disabled"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block ecl-help-block--disabled"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Text field renders correctly when invalid 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--invalid"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-feedback-message"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-feedback-message__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#error"
        />
      </svg>
            Invalid text
    </div>
  </div>
</jest>
`;

exports[`Form group  with Text field renders correctly when required 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Text field renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-form-group"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <label
      class="ecl-form-label"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Text field renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-form-group custom-class custom-class--test"
  >
    <label
      class="ecl-form-label"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Textarea renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Textarea renders correctly when disabled 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--disabled"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block ecl-help-block--disabled"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Textarea renders correctly when invalid 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label ecl-form-label--invalid"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-feedback-message"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-feedback-message__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#error"
        />
      </svg>
            Invalid text
    </div>
  </div>
</jest>
`;

exports[`Form group  with Textarea renders correctly when required 1`] = `
<jest>
  <div
    class="ecl-form-group"
  >
    <label
      class="ecl-form-label"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Textarea renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-form-group"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <label
      class="ecl-form-label"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;

exports[`Form group  with Textarea renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-form-group custom-class custom-class--test"
  >
    <label
      class="ecl-form-label"
    >
      Label
      <span
        class="ecl-form-label__optional"
      >
        (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
    </div>
  </div>
</jest>
`;
